<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.sshahini.myapplication.view.activity.LoginActivity">

    <com.example.sshahini.myapplication.view.custom.CustomFontButton
        android:id="@+id/button_authentication"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textSize="14dp"
        android:textColor="@color/white"
        android:background="@drawable/selector_accent_button"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginTop="30dp"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/label_sign_up" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_authentication_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginBottom="75dp"
        android:layout_above="@id/button_authentication"
        android:layout_gravity="center_horizontal|bottom"
        app:cardElevation="@dimen/standard_card_elevation"
        app:cardCornerRadius="@dimen/standard_card_radius"
        style="@style/CardView">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/banner_login"/>
                <com.example.sshahini.myapplication.view.custom.CustomFontTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/standard_margin"
                    android:textSize="@dimen/large_font_size"
                    android:text="@string/label_login_amoozesh"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:background="@color/colorAccent"/>
                    <com.example.sshahini.myapplication.view.custom.CustomFontTextView
                        android:id="@+id/label_authentication"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_centerVertical="true"
                        android:gravity="right"
                        android:text="@string/label_login"
                        android:textSize="@dimen/small_font_size"/>
                </RelativeLayout>
                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/label_authentication_email_hint"
                    style="@style/authentication_edit_texts_style"
                    />
                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:inputType="textPassword"
                    android:hint="@string/label_authentication_password_hint"
                    style="@style/authentication_edit_texts_style"/>
            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/float_button_authenticate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/card_authentication_container"
        app:layout_anchorGravity="bottom|center_horizontal"
        app:fabSize="mini"
        android:src="@drawable/ic_action_login"/>
</android.support.design.widget.CoordinatorLayout>
